# centralized-oauth-gateway

./: .env.example  .env.prod.example  .gitignore  README.md  architecture.md  docker-compose.prod.yml  docker-compose.yml  mcp-auth-architecture.html  unified_implementation_plan.md
auth-gateway/: .env.example  Dockerfile  README.md  config.py  database.py  dependencies.py  encryption.py  main.py  models.py  requirements.txt  schemas.py
auth-gateway/routes/: auth.py  health.py
auth-gateway/scripts/: generate_keys.py  init_db.py  reencrypt_tokens.py
google-ads-mcp-oauth-main/google-ads-mcp-oauth-main/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  google_ads_server.py  google_ads_server_centralized.py  requirements.txt  test_token_refresh.py
google-analytics-4-mcp-oauth-google-analytics-4-mcp-oauth/google-analytics-4-mcp-oauth-google-analytics-4-mcp-oauth/: .env.example  .gitignore  Dockerfile  env.example  requirements.txt  server.py  server_centralized.py
google-analytics-4-mcp-oauth-google-analytics-4-mcp-oauth/google-analytics-4-mcp-oauth-google-analytics-4-mcp-oauth/oauth/: google_auth.py
mcp-auth-client/: README.md  pyproject.toml  requirements.txt
mcp-auth-client/mcp_auth_client/: __init__.py  client.py  decorators.py  exceptions.py
